<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rhino.family_map.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/row_padding_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/row_padding_vertical"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/common_google_signin_btn_tint">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life_story_lines_title"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/life_story_lines_caption"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/life_story_lines_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <Switch
                android:id="@+id/life_story_lines_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/common_google_signin_btn_tint">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_tree_lines_title"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/family_tree_lines_caption"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/family_tree_lines_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <Switch
                android:id="@+id/family_tree_lines_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/common_google_signin_btn_tint">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spouse_lines_title"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spouse_lines_caption"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/spouse_lines_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <Switch
                android:id="@+id/spouse_lines_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:outlineSpotShadowColor="@color/common_google_signin_btn_tint">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type_title"/>

                <TextView
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type_caption"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/map_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/settings_resync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resync_title"/>

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/resync_caption"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/settings_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_title"/>

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="RETURNS TO LOGIN SCREEN"/>

        </LinearLayout>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>
