<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/kitty_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"

            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:text="@string/username"
            />

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"

            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:text="@string/team"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/kitty_klicker"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/kitty_image"
        android:contentDescription="@string/kitty_klicker"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/kitty"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/score"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:id="@+id/kitty_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/kitty_power"
        android:layout_marginTop="0dp"
        />

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/powerups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/powerups"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/p1"
            android:contentDescription="@string/kitty_klicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_missing"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/p2"
            android:contentDescription="@string/kitty_klicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_missing"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/p3"
            android:contentDescription="@string/kitty_klicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_missing"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/p4"
            android:contentDescription="@string/kitty_klicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_missing"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/p5"
            android:contentDescription="@string/kitty_klicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_missing"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>